[gd_scene load_steps=9 format=3 uid="uid://bobnjcucsjp34"]

[ext_resource type="Script" path="res://lawn/obstacle.gd" id="1_m4xap"]
[ext_resource type="Texture2D" uid="uid://e6ip8nag31wt" path="res://assets/obstacles/rock_no_outline.png" id="2_tnl8d"]
[ext_resource type="AudioStream" uid="uid://cjdmq1qjfy8cr" path="res://assets/mower/hitrock2.mp3" id="3_tl3jd"]
[ext_resource type="Material" uid="uid://nqh8hixj8xqu" path="res://lawn/rock_particle_process.tres" id="4_6n1a0"]
[ext_resource type="Texture2D" uid="uid://ds04tar6uw4l5" path="res://assets/obstacles/pebble_shadow.png" id="5_mnyxk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvof6"]
size = Vector2(105, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahekf"]
size = Vector2(73, 45)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_84mo7"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 2
particles_anim_loop = false

[node name="LawnRock" type="Area2D"]
collision_layer = 4
script = ExtResource("1_m4xap")
score_change = -10
speed_change = -1

[node name="MainSprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.756863, 0.756863, 0.756863, 1)
z_index = -2
scale = Vector2(2, 2)
texture = ExtResource("2_tnl8d")
region_enabled = true
region_rect = Rect2(-1, 0, 65, 64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(4.5, 28)
shape = SubResource("RectangleShape2D_jvof6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-6.5, -25.5)
shape = SubResource("RectangleShape2D_ahekf")

[node name="HitSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tl3jd")
volume_db = 5.0

[node name="GPUParticle_Right" type="GPUParticles2D" parent="."]
self_modulate = Color(0.756863, 0.756863, 0.756863, 1)
z_index = -3
material = SubResource("CanvasItemMaterial_84mo7")
emitting = false
amount = 20
process_material = ExtResource("4_6n1a0")
texture = ExtResource("5_mnyxk")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
draw_order = 0

[node name="GPUParticle_Left" type="GPUParticles2D" parent="."]
self_modulate = Color(0.756863, 0.756863, 0.756863, 1)
z_index = -3
material = SubResource("CanvasItemMaterial_84mo7")
rotation = 3.14159
emitting = false
amount = 20
process_material = ExtResource("4_6n1a0")
texture = ExtResource("5_mnyxk")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0
draw_order = 0
